<resources>
    <string name="app_name">Refueler</string>
    <string name="app_version">version 1.0.0</string>

    <!-- Activities Titles -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_add_car">Add car</string>
    <string name="title_activity_add_refueling">Add refueling</string>
    <string name="title_activity_car">Car</string>


    <!-- navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="daily_refueling">Daily refueling</string>
    <string name="statistics">Statistics</string>
    <string name="charts">Charts</string>
    <string name="cars">Cars</string>
    <string name="action_settings">Settings</string>
    <string name="info">Information</string>

    <!-- Statistics -->
    <!-- Groups -->
    <string name="general_statistics">General</string>
    <string name="fuel_statistics">Fuel</string>
    <string name="cost_statistics">Cost</string>

    <!-- General -->
    <string name="total_fuel_usage">Total fuel usage</string>
    <string name="refueling_count">Refueling count</string>
    <string name="overall_cost">Overall cost</string>

    <!-- Fuel -->
    <string name="minimal_fuel_consumption">Min. consumption</string>
    <string name="average_fuel_consumption">Avg. consumption</string>
    <string name="maximal_fuel_consumption">Max. consumption</string>

    <!-- Cost -->
    <string name="lowest_bill">Lowest bill</string>
    <string name="average_bill">Average bill</string>
    <string name="highest_bill">Highest bill</string>
    <string name="lowest_fuel_price">Lowest fuel price</string>
    <string name="highest_fuel_price">Highest fuel price</string>

    <!-- Common -->
    <string name="this_year">This year</string>
    <string name="this_month">This month</string>
    <string name="prev_month">Previous month</string>

    <!-- Charts -->
    <string name="general_chart">General</string>
    <string name="money_spent_chart">Money spent</string>
    <string name="fuel_price_chart">Fuel prices</string>

    <!-- Information Dialog -->
    <string name="application">Application</string>
    <string name="author">Author</string>
    <string name="repository">Repository</string>

    <!-- Car -->
    <string name="car">Car</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="registration_number">Registration number</string>
    <string name="year_of_production">Year of production</string>
    <string name="mileage">Mileage</string>

    <!-- Refuel -->
    <string name="choose_car">Choose car</string>
    <string name="refuel_cost">Refuel cost</string>
    <string name="price_per_liter">Price per liter</string>
    <string name="refueled">Refueled</string>
    <string name="distance_traveled">Distance traveled</string>
    <string name="refuel_date">Refuel date</string>

    <!-- Empty lists messages -->
    <string name="no_cars">No cars</string>
    <string name="no_refuels">No refuels</string>

    <!-- Common -->
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="car_delete">Do you really want to delete this car?</string>
    <string name="refuel_delete">Do you really want to delete this refuel?</string>

    <!-- Validation Errors -->
    <string name="not_empty">This field cannot be empty</string>
    <string name="not_chosen">You should choose correct value</string>
    <string name="gt_zero">Value must be greater than zero</string>
    <string name="incorrect_year">Enter correct year</string>
    <string name="wrong_date_format">Wrong date format</string>
    <string name="no_chart_data">No chart data available</string>

    <!-- Months -->
    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- EVERYTHING BELOW THAT COMMENT IS TO DELETE OR EDIT -->
    <string name="pref_ringtone_silent">Silent</string>

    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <!--<string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    &lt;!&ndash; Example settings for Data & Sync &ndash;&gt;
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    &lt;!&ndash; Example settings for Notifications &ndash;&gt;
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="author">Author</string>
    <string name="repository">Repository</string>
    <string name="title_activity_add_car">New car</string>
    <string name="title_activity_add_refueling">New refueling</string>-->
</resources>
