<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_group_main" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cars"
            android:icon="@drawable/ic_car"
            android:title="@string/cars" />
    </group>

    <item android:title="@string/general">
        <menu>
            <group android:id="@+id/menu_group_general" android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_daily_refueling"
                    android:icon="@drawable/ic_list"
                    android:title="@string/daily_refueling" />
                <item
                    android:id="@+id/nav_statistics"
                    android:icon="@drawable/ic_statistics"
                    android:title="@string/statistics" />
                <item
                    android:id="@+id/nav_charts"
                    android:icon="@drawable/ic_charts"
                    android:title="@string/charts" />
            </group>
        </menu>
    </item>

    <group android:id="@+id/menu_group_settings" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:checkable="false"
            android:title="@string/info" />
    </group>
</menu>
