<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/application"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/application"
        android:textSize="@dimen/text_large_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_large_size"
        android:layout_toEndOf="@+id/application"
        android:gravity="end|center_vertical"
        android:text="@string/app_name"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/application"
        android:text="@string/author"
        android:textSize="@dimen/text_large_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/author_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_large_size"
        android:layout_below="@+id/application"
        android:layout_toEndOf="@+id/authors"
        android:gravity="end|center_vertical"
        android:text="Marek Kamiński"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/repository"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authors"
        android:text="@string/repository"
        android:textSize="@dimen/text_medium_size"
        android:textStyle="bold" />

    <!--<TextView
        android:id="@+id/repository_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/repository"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="github.com/wornr/Refueler" />-->


</RelativeLayout>