<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.marek.refueler.activities.AddCarActivity">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/car_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="14dp"
                android:layout_marginLeft="6dp"
                android:orientation="horizontal"
                android:weightSum="1.0"
                android:baselineAligned="false">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".25"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:text="@string/car"/>

                <Spinner
                    android:id="@+id/set_car"
                    android:layout_width="0dp"
                    android:layout_weight=".75"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0"
                android:baselineAligned="false">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/refuel_fuel_price"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/set_fuel_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:inputType="numberDecimal"
                        android:hint="@string/price_per_liter"
                        android:maxLines="1"
                        android:maxLength="5"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/refuel_fuel_volume"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/set_fuel_volume"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:inputType="numberDecimal"
                        android:hint="@string/refueled"
                        android:maxLines="1"
                        android:maxLength="5"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0"
                android:baselineAligned="false">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/refuel_distance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5">

                    <EditText
                        android:id="@+id/set_distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:inputType="number"
                        android:hint="@string/distance_traveled"
                        android:maxLines="1"
                        android:maxLength="5"/>
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/set_fuel_type"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0"
                android:baselineAligned="false">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/refuel_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5">

                    <EditText
                        android:id="@+id/set_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:inputType="date"
                        android:hint="@string/refuel_date"
                        android:maxLines="1"
                        android:maxLength="10"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.v4.widget.NestedScrollView>